--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -21,7 +21,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '09ac6076-0299-4d99-b019-70c9e7702c9f',
-        'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
+        'scope':  'patient/Observation.read'
       });
     </script>
     <div class="spinner">
